<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity">

    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editNoteTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCourses"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses" android:hint="Note Title"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editNoteText"
            app:layout_constraintStart_toStartOf="@+id/spinnerCourses"
            app:layout_constraintEnd_toEndOf="@+id/spinnerCourses" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editNoteTitle"
            android:hint="Note Text"/>
</android.support.constraint.ConstraintLayout>